[package]
name = "pinbox"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
comrak = "0.35.0"
dirs = "6.0.0"
git2 = "0.20.0"
scraper = "0.22.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
toml = "0.8.20"
url = { version = "2.5.4", features = ["serde"] }
